--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wordcount</groupId>
-    <artifactId>wordcount</artifactId>
+    <groupId>com.bcesalary</groupId>
+    <artifactId>bcesalary</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -73,7 +73,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.wordcount.BCESalary</mainClass>
+                            <mainClass>com.bcesalary.BCESalary</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
